Get weather forecast by zone

--- a/WeatherAPI/Pages/FetchData.razor
+++ b/WeatherAPI/Pages/FetchData.razor
@@ -21,7 +21,7 @@
 
 @if (loading)
 {
-    <p><em>Loading...</em></p>
+    <p><em>Please input the coordinates and click search to get the weather forecast</em></p>
 }
 else
 {
