--- a/WeatherAPI/Shared/NavMenu.razor
+++ b/WeatherAPI/Shared/NavMenu.razor
@@ -11,10 +11,15 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </li>       
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="timezoneforecast">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Forecast by zone
+            </NavLink>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecast
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Forecast by coordinates
             </NavLink>
         </li>
     </ul>
